add light blue lite css style and logo

--- a/codice/templates/codice/bootstrap4.html
+++ b/codice/templates/codice/bootstrap4.html
@@ -4,6 +4,7 @@
     {% load i18n %}
     {% get_current_language as LANGUAGE_CODE %}
 {% endif %}
+{% load static %}
 <html lang="{{ LANGUAGE_CODE|default:'en_us' }}">
 
 <head>
@@ -15,6 +16,7 @@
     <!-- Page title -->
     <title>{% block bootstrap4_title %}django-bootstrap4 template title{% endblock %}</title>
 
+    <link href="{% static 'css/lb-lite/application.css' %}" rel="stylesheet">
     <!-- Bootstrap CSS -->
     {% bootstrap_css %}
 
