--- a/codice/templates/codice/base.html
+++ b/codice/templates/codice/base.html
@@ -1,5 +1,6 @@
 {% extends 'codice/bootstrap4.html' %}
 {% load static %}
+{% load i18n %}
 {% block bootstrap4_title %}
 {% block title %}
 CODICE
@@ -9,7 +10,7 @@ CODICE
 {% block bootstrap4_before_content%}
 <div class="logo">
     <a href="#% url '#home' %}"><img src="{% static 'img/logo.png' %}" style="border: 0px; margin: 0px"></a>
-    <span class="divider" >&nbsp|&nbsp;</span>
+    <span class="divider" >&nbsp|&nbsp;{% trans 'version' %} {{ CODICE_VERSION }}</span>
     {% block breadcrumb_path %}
         <b>{{ user.name }}</b>
     {% endblock %}
