--- a/codice/templates/codice/bootstrap4.html
+++ b/codice/templates/codice/bootstrap4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load bootstrap4 %}
+{% load fontawesome_5 %}
 {% if 'use_i18n'|bootstrap_setting %}
     {% load i18n %}
     {% get_current_language as LANGUAGE_CODE %}
@@ -18,7 +19,7 @@
 
     <link href="{% static 'css/application.css' %}" rel="stylesheet">
 
-
+    {% fontawesome_5_static %}
     {% block bootstrap4_extra_head %}{% endblock %}
 
 </head>
