--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -4,19 +4,53 @@
 {% load gravatar %}
 {% load humanize %}
 {% load mathfilters %}
+{% load boxes %}
 {% block content_body %}
     <h2 class="page-title"><i class="fas fa-columns"></i> {% trans 'Dashboard' %}</h2>
-    {% if project_count == 0 and user.can_add_project %}
+    {% if repo_count == 0 %}
         <section class="widget">
             <div class="body">
                 <div class="jumbotron">
-                    <h2>{% trans 'No projects found' %}</h2>
-                    <p class="lead">{% trans 'You have not created any project yet' %}</p>
+                    <h2>{% trans 'No repository found' %}</h2>
+                    <p>{{  user.can_add_repo}}</p>
+                    <p class="lead">{% trans 'You have not created any repository yet' %}</p>
                     <p class="lead">
-                        <a class="btn btn-primary btn-lg" href="{% url 'projects-add' %}" role="button"><i class="fa fa-plus-circle"></i> <small>{% trans 'Add Project' %}</small></a>
+                        <a class="btn btn-primary btn-lg" href="{% url 'repository-add' %}" role="button">
+                            <i class="fa fa-plus-circle"></i> <small>{% trans 'Add Repository' %}</small>
+                        </a>
                     </p>
                 </div>
             </div>
         </section>
+    {% else %}
+          <div class="row">
+            <div class="col-md-5">
+                <div class="row">
+                    <a href="{% url 'repos' %}">
+                        {% if repo_count == 1 %}
+                            {% icon_box 'col-md-3' 'fas fa-archive text-warning' 'text-warning' repo_count|intcomma 'repository' %}
+                        {% else %}
+                            {% icon_box 'col-md-3' 'fas fa-archive text-warning' 'text-warning' repo_count|intcomma 'repositories' %}
+                        {% endif %}
+                    </a>
+                </div>
+            </div>
+          </div>
     {% endif %}
 {% endblock content_body %}
+{% block top_actions %}
+    <li>
+        <div class="top_action_button_div dropdown-toggle">
+            <a class="btn btn-primary" href="{% url 'repository-add' %}" role="button">
+                <i class="fa fa-plus-circle"></i> <small>{% trans 'Add Repository' %}</small>
+            </a>
+        </div>
+
+    </li>
+    <li class="divider"></li>
+    <li>&nbsp;</li>
+
+{% endblock %}
+{% block breadcrumb_path %}
+        <a href="{% url 'home' %}"><span class="text-gray-lighter">{% trans 'home' %}</span></a> /
+{% endblock breadcrumb_path %}
