add developer contribution for repo

--- a/codice/templates/codice/base_home.html
+++ b/codice/templates/codice/base_home.html
@@ -3,7 +3,6 @@
 {% load i18n %}
 {% block content %}
     <div class="landing">
-        <div class="container-fluid">
             <header class="page-header">
                 <div class="navbar">
                     <ul class="nav navbar-nav navbar-right pull-right">
@@ -46,7 +45,7 @@
 
                 </div>
             </header>
-            <div class="content">
+            <div class="content container">
                 <br/>
                 {% include 'codice/layout/messages.html' %}
                 {% block content_body %}
@@ -56,6 +55,5 @@
             <div class="loader-wrap hiding hide">
                 <i class="fa fa-circle-o-notch fa-spin"></i>
             </div>
-        </div>
     </div>
 {%  endblock %}
