--- a/repos/templates/repository/detail.html
+++ b/repos/templates/repository/detail.html
@@ -6,6 +6,60 @@
 {% load mathfilters %}
 {% load boxes %}
 {% load bootstrap4 %}
+
+{% block additional_head %}
+{% if not repository.ready %}
+<meta http-equiv="refresh" content="10" >
+<style>
+.tooltip-table {
+  width: 100%;
+}
+
+.tooltip-table .data {
+  text-align: right;
+}
+
+.tooltip-footer {
+  opacity: 0.5;
+}
+</style>
+{% endif %}
+<style>
+
+.node {
+    color:black;
+  cursor: pointer;
+
+}
+
+.node:hover {
+  stroke: #000;
+  stroke-width: 1.5px;
+}
+
+.node--root {
+  stroke: #777;
+  stroke-width: 2px;
+}
+
+.node--leaf {
+  fill: white;
+  stroke: #777;
+  stroke-width: 1px;
+}
+
+.label {
+  font: 18px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: black;
+}
+
+.label,
+.node--root{
+  pointer-events: none;
+}
+</style>
+
+{% endblock %}
 {% block content_body %}
     <h2 class="page-title">
         <i class="fas fa-archive"></i> {%trans 'Repository' %}: {{ repository.name}}
@@ -16,6 +70,7 @@
     </h2>
     {% include 'repository/blocks/stats_widgets.html' %}
     {% include 'repository/blocks/developers_of_branch.html' %}
+    {% include 'repository/blocks/maps.html' %}
 {% endblock %}
 {% block breadcrumb_path %}
     <a href="{% url 'home' %}"><span class="text-gray-lighter">{% trans 'home' %}</span></a> /
@@ -38,3 +93,7 @@
     {% endif %}
     <li class="divider"></li>
 {% endblock top_actions %}
+
+{% block additional_javascript %}
+    {% include 'repository/blocks/scripts.html' %}
+{% endblock %}
