--- a/repos/templates/repository/blocks/maps.html
+++ b/repos/templates/repository/blocks/maps.html
@@ -13,7 +13,8 @@
             </div>
     </div>
     <div class="col-xs-12 col-sm-2 col-md-4 col-lg-4">
-        <div class="widget" style="height: 100%; max-height: 100%;">
+        <div id="treemaps">
+            <div class="widget">
                 <header>
                     <h4>{% trans 'Knowledge map' %}</h4>
                     <div class="widget-controls">
@@ -27,5 +28,21 @@
                         </div>
                 </div>
             </div>
+             <div class="widget">
+                    <header>
+                        <h4>{% trans 'Code Size Map' %}</h4>
+                        <div class="widget-controls">
+                        <a data-widgster="expand" title="Expand" href="#"><i class="glyphicon glyphicon-chevron-up"></i></a>
+                        <a data-widgster="collapse" title="Collapse" href="#"><i class="glyphicon glyphicon-chevron-down"></i></a>
+                    </div>
+                    </header>
+                    <div class="body">
+                        <div class="row">
+                            <div id="cmap"></div>
+                        </div>
+                    </div>
+             </div>
+        </div>
+
     </div>
 </div>
