--- a/repos/templates/repository/blocks/maps.html
+++ b/repos/templates/repository/blocks/maps.html
@@ -9,8 +9,10 @@
                         <a data-widgster="collapse" title="Collapse" href="#"><i class="glyphicon glyphicon-chevron-down"></i></a>
                     </div>
                 </header>
-                <div id="hotspots-chart" ></div>
-            </div>
+                <div class="body">
+                    <div id="hotspots-chart" ></div>
+                </div>
+        </div>
     </div>
     <div class="col-xs-12 col-sm-2 col-md-4 col-lg-4">
         <div id="treemaps">
