--- a/repos/templates/repository/blocks/scripts.html
+++ b/repos/templates/repository/blocks/scripts.html
@@ -44,3 +44,6 @@ var branch_id = '{{ branch_id }}/';
 
 <script src="{% static 'lib/d3/d3.js' %}"></script>
 <script src="{% static 'graphs/hotspots.js' %}"></script>
+<script>
+$('.widget').widgster();
+</script>
