--- a/repos/templates/repository/detail.html
+++ b/repos/templates/repository/detail.html
@@ -64,13 +64,11 @@
     <h2 class="page-title">
         <i class="fas fa-archive"></i> {%trans 'Repository' %}: {{ repository.name}}
         &nbsp;
-        <small>
-             {% trans 'status:' %}&nbsp;<i class="{{ repository.status_icon }}"></i> {{ repository.get_status_display }}
-        </small>
+        <small>{% trans 'Branch:' %} {{ branch.name }}</small>
     </h2>
     {% include 'repository/blocks/stats_widgets.html' %}
-    {% include 'repository/blocks/developers_of_branch.html' %}
     {% include 'repository/blocks/maps.html' %}
+    {% include 'repository/blocks/developers_of_branch.html' %}
 {% endblock %}
 {% block breadcrumb_path %}
     <a href="{% url 'home' %}"><span class="text-gray-lighter">{% trans 'home' %}</span></a> /
@@ -79,7 +77,6 @@
 {% endblock %}
 
 {% block top_actions %}
-
     <li class="divider"></li>
     <li>
         <div class="top_action_button_div dropdown-toggle">
