calc coupling degree

--- a/files/templates/files/_file_view_base.html
+++ b/files/templates/files/_file_view_base.html
@@ -32,10 +32,10 @@
         </div>
     </div>
     <div class="row" id="code-dump">
-        <div class="col-md-8">
+        <div class="col-lg-7 col-md-7">
             {% block file_dump %}{% endblock %}
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-5 col-md-5 col-sm-12">
             {% block file_authors %}{% endblock %}
             {% block file_coupling %}{% endblock %}
         </div>
