--- a/repos/templates/repository/list.html
+++ b/repos/templates/repository/list.html
@@ -52,7 +52,7 @@
         </td>
         <td class="text-align-right">
             {% if repo.ready %}
-            <a href="#% url 'file-list-repo' repo.id %}?from=repos" class="btn btn-block btn-primary">
+            <a href="{% url 'file-list-repo' repo.id %}?from=repos" class="btn btn-block btn-primary">
                 {{ repo.files_count|intcomma }}
             </a>
             {% else %}
