--- a/repos/templates/repository/blocks/stats_widgets.html
+++ b/repos/templates/repository/blocks/stats_widgets.html
@@ -33,7 +33,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="row">
-                            <a  href=" url 'repo-devs-list' repo.id %}" >
+                            <a  href="{% url 'repo-devs-list' repository.id %}" >
                             {% icon_box "col-md-3" "fas fa-users text-info" "description text-info" devs_count|intcomma 'devs' %}
                             </a>
                             {% big_text_box 'col-md-3' 'fas fa-bus' 'big-text text-danger' 'description text-danger' bus_factor|intcomma 'bus factor' %}
